# second_brain_v0

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_COORDINATION_GUIDE.md  AUDIT_SUMMARY.txt  BACKUP_search_engine.py  BENCHMARKING_README.md  BUILD_LOG_IMPLEMENTATION.md  BUILD_LOG_WEB_APP_IMPLEMENTATION.md  CLAUDE.md  CLAUDE_TO_GPT5_AUTHENTICATION_FIX.md  CLAUDE_TO_GPT5_MSG.md  CLEANUP_SUMMARY.md  DEPLOYMENT_STRATEGY.md  DEVELOPMENT_WORKFLOWS.md  DISCORD_CONTROL_SYSTEM_DESIGN.md  Dockerfile  FRONTEND_BACKEND_AUDIT.md  GPT5_MSG_FROM_CLAUDE.md  GPT5_MSG_TO_CLAUDE.md  HEALTH_MONITORING.md  HYBRID_SEARCH_IMPLEMENTATION_SUMMARY.md  ISSUE_DETAILS_AND_FIXES.md  LOGIN_STATUS.md  PHASE_2_ROADMAP.md  README.md  README_AUDIT.md  README_quickstart.md  REMAINING_FEATURES_CC.md  REPORT_TO_OPUS.md  SEARCH_IMPLEMENTATION_SUMMARY.md  SEARCH_IMPROVEMENT_STRATEGY.md  SESSION_PROGRESS_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_REPORT.md  ULTIMATE_RAG_IMPLEMENTATION_COMPLETE.md  VOICE_NOTES_STATUS.md  VOICE_NOTES_USER_GUIDE.md  (+85 more)
.claude/: ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md
.githooks/: pre-commit
.github/: pull_request_template.md
additions/: discord_bot.py  landing_page_structure.html  note_detail_shadcn.html  shadcn_dashboard.html
api/: routes_capture.py  routes_search.py
apple_shortcuts/: 01_voice_memo.json  02_photo_ocr.json  03_quick_thought.json  04_web_clip.json  05_recipe_saver.json  06_dream_journal.json  07_contact_note.json  08_book_logger.json  09_habit_tracker.json  10_quote_saver.json  Calendar_Event_Shortcut.json  Contact_Shortcut.json  (+20 more)
(+202 files in other folders)
